--- a/src/components/MemoryImg/MemoryImg.scss
+++ b/src/components/MemoryImg/MemoryImg.scss
@@ -11,7 +11,7 @@
      &__box {
           min-width: 500px;
           height: 300px;
-          background: red;
+          background: $mainClr;
           position: relative;
           overflow: hidden;
           &:hover img {
