--- a/src/components/Remember/Remember.scss
+++ b/src/components/Remember/Remember.scss
@@ -2,7 +2,7 @@
 
 .remember {
      font-size: 12px;
-     padding: 0 18px;
+     padding: 10px 18px;
      color: $activeClr;
      background-color: #144400;
      box-shadow: 0 0 5px $hoverClr;
