--- a/src/components/Activity/Activity.scss
+++ b/src/components/Activity/Activity.scss
@@ -10,7 +10,7 @@
      &__container {
           @include flex(center);
           flex-wrap: wrap;
-          width: 80%;
+          width: 90%;
           gap: 20px;
           @media screen and (max-width: 1280px) {
                gap: 40px;
@@ -20,44 +20,58 @@
           }
      }
      &__box {
+          box-sizing: border-box;
+          border: 1px solid $subClr2;
           border-radius: 5px;
           background-color: $subClr;
           @include flex(around);
           flex-direction: column;
-          width: 350px;
+          width: 380px;
           height: 260px;
           cursor: pointer;
-          transition: 0.5s ease;
+          transition: 0.35s ease-in;
+          box-shadow: 0 0 15px $mainClr;
           &--description {
                @include abs(center);
                color: $mainClr;
-               width: 350px;
-               padding: 15px;
+               width: 300px;
+               padding: 10px;
                text-align: justify;
-               transition: 0.35s ease;
+               line-height: 1.6;
+               transition: 0.35s ease-in;
+               opacity: 0;
+               font-size: 14px;
+               @media screen and (max-width: 767px) {
+                    line-height: 1.6;
+                    font-size: 12px;
+               }
           }
           &--img {
-               width: 320px;
+               width: 95%;
                height: 180px;
                position: relative;
-               transition: 0.45s ease;
                & img {
                     @include abs(full);
+                    border-radius: 5px;
+                    transition: 0.35s ease-in;
                }
           }
           &--title {
                color: $activeClr;
-               text-shadow: 1px 1px rgb(44, 44, 44);
                padding-bottom: 10px;
                transition: 0.35s ease;
           }
           &:hover {
                background-color: $hoverClr;
-               border: 1px solid $mainClr;
-               box-shadow: 0 0 15px $mainClr;
+               border: 1px solid $newMain;
+               box-shadow: 0 0 20px $newMain;
+               transform: scale(1.02);
                & .ac__box--title {
                     color: $mainClr;
                     text-shadow: none;
+               }
+               & .ac__box--description {
+                    opacity: 1;
                }
                &.ac__box--img {
                     width: 100%;
