--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,30 +1,100 @@
 @import "../../scss/_variable";
-#header {
+
+.header {
      position: fixed !important;
+     box-shadow: 0 0 10px $newMain3;
      top: 0;
      left: 0;
      right: 0;
      z-index: 999;
+     padding-bottom: 5px;
      height: 60px;
+     transition: 0.15s ease;
      background-color: $mainClr;
      @include flex(center);
      @media screen and (max-width: 767px) {
           justify-content: flex-start;
      }
 }
-.header__bar {
-     color: $activeClr;
-     font-size: 30px;
-     padding-right: 20px;
+.header.active {
+     height: 60px;
+     transition: 0.15s ease;
+     padding: 30px;
+     box-shadow: 0 0 20px $newMain3;
+     background-image: linear-gradient(145deg, $mainClr, $newMain);
+}
+.header__scroll {
+     position: absolute;
+     width: 0%;
+     bottom: 0;
+     left: 0;
+     height: 5px;
+     background-color: $newMain3;
+}
+
+.header__back {
+     @include flex(center);
+     gap: 10px;
      cursor: pointer;
-     display: none;
+     &:active {
+          opacity: 0.8;
+     }
+     & span {
+          font-size: 12px;
+     }
      position: fixed;
-     right: 40px;
+     left: 50px;
+     border: none;
+     font-size: 25px;
+     color: $subClr2;
+
+     @media screen and (max-width: 767px) {
+          display: none;
+     }
+}
+
+.header__fixlogo {
+     width: 45px;
+     height: 45px;
+     margin-right: 30px;
+
+     @media screen and (max-width: 767px) {
+          display: block;
+          position: absolute;
+          opacity: 1;
+          top: 7px;
+          left: 30px;
+          z-index: 99;
+          margin-right: 0px;
+     }
+}
+.header__h1 {
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     color: $activeClr !important;
+     font-size: 20px;
+     display: none;
      @media screen and (max-width: 767px) {
           display: block;
      }
 }
-.header__list.active {
+.header__bar {
+     color: $activeClr;
+     font-size: 30px;
+     padding: 20px;
+     cursor: pointer;
+     display: none;
+     position: fixed;
+     right: 20px;
+     @media screen and (max-width: 767px) {
+          display: block;
+          padding: 10px;
+          z-index: 99;
+     }
+}
+.header__list.active1 {
      transform: scaleY(1);
 }
 .header__list {
@@ -35,19 +105,15 @@
      transition: 0.2s ease;
      @media screen and (max-width: 767px) {
           transform-origin: 50% 0;
-          transform: scaleY(0.001);
+          transform: scaleY(0.00000001);
           flex-direction: column;
           background-color: $mainClr;
-          opacity: 0.9;
+          opacity: 0.94;
           width: 100%;
-          margin-top: 400px;
+          margin-top: 320px;
           gap: 0px;
      }
 
-     &--logo {
-          width: 45px;
-          height: 45px;
-     }
      &--item {
           cursor: pointer;
           font-size: 15px;
@@ -56,9 +122,6 @@
           line-height: 50px;
           position: relative;
 
-          @media screen and (max-width: 767px) {
-               // display: none;
-          }
           &:after {
                content: "";
                position: absolute;
@@ -78,7 +141,7 @@
                }
           }
      }
-     &--item.active {
+     &--item.active1 {
           color: $activeClr;
           position: relative;
 
