--- a/src/components/Heading/Heading.scss
+++ b/src/components/Heading/Heading.scss
@@ -1,10 +1,11 @@
 @import "../../scss/_variable";
 .heading-center {
      margin-top: 60px;
+     padding-top: 20px;
      @include flex(center);
      flex-direction: column;
      @media screen and (max-width: 767px) {
-          margin-top: 150px;
+          margin-top: 50px;
      }
 }
 .heading {
@@ -15,10 +16,9 @@
           font-size: 24px;
      }
 
-     & span::after {
-          content: "";
+     & span {
           position: absolute;
-          bottom: -5px;
+          bottom: -7px;
           left: -10px;
           height: 2px;
           width: 20%;
