--- a/src/components/Hosting/Hosting.scss
+++ b/src/components/Hosting/Hosting.scss
@@ -1,22 +1,23 @@
 @import "../../scss/_variable";
-#manager {
+#hosting {
      width: 100%;
      flex-direction: column;
      @include flex(center);
 }
-.ma__container {
+.host__container {
      @include flex(center);
-     flex-wrap: wrap-reverse;
-     gap: 30px;
-     width: 90%;
+     flex-wrap: wrap;
+     gap: 40px;
+     width: 100%;
 }
-.ma {
+.host {
      &__name {
           color: $mainClr;
-          font-size: 18px;
+          font-size: 16px;
+          line-height: 1.8;
      }
      &__position {
-          margin-top: -10px;
+          margin-top: -5px;
           color: $mainClr;
           font-size: 14px;
      }
@@ -38,13 +39,13 @@
           overflow: hidden;
           @include flex(between);
           flex-direction: column;
-          min-width: 300px;
-          height: 380px;
+          min-width: 220px;
+          height: 300px;
           box-shadow: 0 0 10px $mainClr;
           transition: 0.35s ease;
-          &:nth-last-child(2) {
-               min-width: 330px;
-               height: 420px;
+          &:nth-child(3) {
+               min-width: 260px;
+               height: 330px;
           }
           &:hover {
                transform: translateY(-10px);
@@ -54,7 +55,7 @@
      &__img {
           position: relative;
           width: 100%;
-          height: 280px;
+          height: 230px;
           & img {
                @include abs(full);
           }
