--- a/src/components/Manager/Manager.scss
+++ b/src/components/Manager/Manager.scss
@@ -3,33 +3,39 @@
      width: 100%;
      flex-direction: column;
      @include flex(center);
+     flex-wrap: wrap;
 }
 .ma__container {
      @include flex(center);
      flex-wrap: wrap-reverse;
      gap: 30px;
-     width: 90%;
+     width: 1200px;
+     @media screen and (max-width: 1200px) {
+          width: 80%;
+     }
 }
 .ma {
      &__name {
           color: $mainClr;
-          font-size: 18px;
+          font-size: 16px;
      }
      &__position {
-          margin-top: -10px;
+          margin-top: -5px;
           color: $mainClr;
           font-size: 14px;
      }
      &__icon {
           transition: 0.35s ease;
-          font-size: 30px;
+          font-size: 25px;
           color: $mainClr;
           &:hover {
                color: rgb(0, 158, 197);
           }
      }
      &__content {
+          margin-top: 10px;
           @include flex(around);
+          gap: 5px;
           flex-direction: column;
           flex: 1;
      }
@@ -38,13 +44,13 @@
           overflow: hidden;
           @include flex(between);
           flex-direction: column;
-          min-width: 300px;
-          height: 380px;
+          min-width: 250px;
+          height: 300px;
           box-shadow: 0 0 10px $mainClr;
           transition: 0.35s ease;
           &:nth-last-child(2) {
-               min-width: 330px;
-               height: 420px;
+               min-width: 260px;
+               height: 310px;
           }
           &:hover {
                transform: translateY(-10px);
@@ -54,7 +60,7 @@
      &__img {
           position: relative;
           width: 100%;
-          height: 280px;
+          height: 200px;
           & img {
                @include abs(full);
           }
