--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -3,6 +3,7 @@
 #contact {
      margin-top: 40px;
      padding-top: 30px;
+     padding-bottom: 40px;
      background: $mainClr;
 }
 .contact__container {
