--- a/src/components/Heading/Heading.scss
+++ b/src/components/Heading/Heading.scss
@@ -15,6 +15,9 @@
      @media screen and (max-width: 767px) {
           font-size: 24px;
      }
+     @media screen and (max-width: 367px) {
+          font-size: 18px;
+     }
 
      & span {
           position: absolute;
