--- a/src/components/EventName/EventName.scss
+++ b/src/components/EventName/EventName.scss
@@ -8,6 +8,7 @@
      gap: 20px;
      row-gap: 24px;
      @media screen and (max-width: 767px) {
+          padding-top: 100px;
           padding-left: 0%;
           padding-right: 0%;
           gap: 15px;
@@ -22,29 +23,29 @@
      &__container {
           outline: none;
           border: none;
-          padding: 7px 15px;
-          font-size: 13px;
-          border: 1px solid $newMain;
+          padding: 6px 12px;
+          font-size: 14px;
+          border: 0px solid $newMain;
           border-radius: 100rem;
-          background-color: $newMain;
-          box-shadow: 0 0 4px $newMain;
+          background-color: $newClr4;
+          box-shadow: 0 0 2px $newMain;
           color: $activeClr;
           position: relative;
           overflow: hidden;
           font-weight: 400;
-          transition: 0.25s ease-in;
+          transition: 0.15s ease-in;
 
           @media screen and (max-width: 767px) {
                font-size: 11px;
           }
           &.activeEvent {
-               background-color: $hoverClr;
+               background-color: $background;
                color: $mainClr;
           }
 
           &:hover {
-               box-shadow: 0 0 8px $newMain;
-               transform: scale(1.02);
+               box-shadow: 0 0 4px $newMain !important;
+               transform: scale(1.01);
           }
      }
 }
