--- a/src/components/Hosting/Hosting.scss
+++ b/src/components/Hosting/Hosting.scss
@@ -7,26 +7,31 @@
 .host__container {
      @include flex(center);
      flex-wrap: wrap;
-     gap: 40px;
+     gap: 30px;
      width: 100%;
 }
 .host {
      &__name {
-          color: $mainClr;
+          color: rgb(88, 88, 88);
+
           font-size: 16px;
           line-height: 1.9;
      }
      &__position {
-          color: $mainClr;
+          color: rgb(88, 88, 88);
+
           font-size: 13px;
+          transform: translateY(10px);
+
+          transition: 0.6s cubic-bezier(0, 0.37, 0.85, 1.79);
      }
      &__icon {
-          transition: 0.35s ease;
+          transition: 0.45s ease;
           font-size: 28px;
           color: $mainClr;
-          &:hover {
-               color: rgb(0, 158, 197);
-          }
+          transform: translateY(40px);
+
+          transition: 0.38s cubic-bezier(0, 0.37, 0.85, 1.79);
      }
      &__content {
           @include flex(around);
@@ -38,23 +43,35 @@
           overflow: hidden;
           @include flex(between);
           flex-direction: column;
-          min-width: 200px;
-          height: 250px;
-          box-shadow: 0 0 10px $mainClr;
+          min-width: 220px;
+          height: 280px;
+          box-shadow: 0 0 3px $TextClr;
           transition: 0.35s ease;
           &:nth-child(3) {
                min-width: 230px;
-               height: 280px;
+               height: 295px;
           }
           &:hover {
-               transform: translateY(-10px);
-               box-shadow: 0 0 30px $mainClr;
+               transition-delay: 0.35s;
+               transform: translateY(-7px);
+               box-shadow: 0 0 7px $mainClr;
+               & .host__name {
+                    color: $subClr;
+                    transition-delay: 0.35s;
+               }
+               & .host__icon {
+                    color: rgb(0, 158, 197);
+                    transform: translateY(0px);
+               }
+               & .host__position {
+                    transform: translateY(0px);
+               }
           }
      }
      &__img {
           position: relative;
           width: 100%;
-          height: 180px;
+          height: 160px;
           & img {
                @include abs(full);
           }
