--- a/src/components/LoadImg/LoadImg.scss
+++ b/src/components/LoadImg/LoadImg.scss
@@ -1,17 +1,9 @@
 @import "../../scss/_variable";
-.loading {
-     width: 100%;
-     height: 100%;
-     position: fixed;
-     z-index: 99999;
-     background: $mainClr;
-     top: 0;
-     @include flex(center);
-     left: 0;
+
+.fade-container {
+     @include abs(center);
+     z-index: 99;
 }
-
-/* Main code */
-
 .fade-loading {
      width: 3rem;
      height: 3rem;
