--- a/src/components/Manager/Manager.scss
+++ b/src/components/Manager/Manager.scss
@@ -16,18 +16,23 @@
 }
 .ma {
      &__name {
-          color: $mainClr;
+          color: rgb(88, 88, 88);
           font-size: 16px;
+          transition: 0.35s ease;
+          z-index: -1;
      }
      &__position {
           margin-top: -5px;
-          color: $mainClr;
+          color: gray;
           font-size: 14px;
+          transition: 0.18s cubic-bezier(0, 0.37, 0.85, 1.79);
+          transform: translateY(5px);
      }
      &__icon {
-          transition: 0.35s ease;
-          font-size: 25px;
-          color: $mainClr;
+          transition: 0.3s cubic-bezier(0, 0.37, 0.85, 1.79);
+          font-size: 28px;
+          color: rgb(88, 88, 88);
+          transform: translateY(40px);
           &:hover {
                color: rgb(0, 158, 197);
           }
@@ -46,15 +51,30 @@
           flex-direction: column;
           min-width: 250px;
           height: 300px;
-          box-shadow: 0 0 10px $mainClr;
-          transition: 0.35s ease;
+          box-shadow: 0 0 2px $TextClr;
+          transition: 0.25s ease-in;
           &:nth-last-child(2) {
                min-width: 260px;
                height: 310px;
           }
           &:hover {
-               transform: translateY(-10px);
-               box-shadow: 0 0 30px $mainClr;
+               transform: translateY(-7px);
+               box-shadow: 0 0 7px $subClr;
+               transition-delay: 0.28s;
+
+               & .ma__icon {
+                    color: rgb(0, 158, 197);
+                    transform: translateY(0px);
+                    font-size: 27px;
+               }
+               & .ma__name {
+                    color: $newMain2;
+                    transition-delay: 0.3s;
+                    transform: translateX(0px);
+               }
+               & .ma__position {
+                    transform: translateY(0px);
+               }
           }
      }
      &__img {
@@ -64,5 +84,55 @@
           & img {
                @include abs(full);
           }
+     }
+}
+.ma__full__team {
+     margin-top: 80px;
+     width: 80%;
+     height: 650px;
+     box-shadow: 0 0 5px $mainClr;
+     position: relative;
+     @media screen and (max-width: 1200px) {
+          height: 450px;
+     }
+     @media screen and (max-width: 767px) {
+          width: 100%;
+          height: 400px;
+     }
+     @media screen and (max-width: 420px) {
+          width: 100%;
+          height: 300px;
+     }
+     & img {
+          @include abs(full);
+     }
+}
+
+.fade-container {
+     @include abs(center);
+}
+.fade-loading {
+     width: 3rem;
+     height: 3rem;
+     background-color: $newMain3;
+     border-radius: 5rem;
+     margin: 2rem auto;
+     position: relative;
+}
+.fade-loading:before {
+     content: "";
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     border-radius: inherit;
+     background-color: inherit;
+     animation: fade 1s forwards infinite linear;
+}
+@keyframes fade {
+     to {
+          transform: scale(2);
+          opacity: 0;
      }
 }
