--- a/src/components/MemoryImg/MemoryImg.scss
+++ b/src/components/MemoryImg/MemoryImg.scss
@@ -1,17 +1,18 @@
 @import "../../scss/_variable";
 
 #memoryImg {
-     margin-top: 70px;
+     transition: 0.35s ease;
 }
 .me__container {
      @include flex(center);
+
      flex-wrap: wrap;
      gap: 2px;
      transition: 0.35s ease;
 }
 .show__more {
      @include flex(center);
-     margin-top: 70px;
+     margin-top: 50px;
      &--btn {
           outline: none;
           border: none;
@@ -39,11 +40,11 @@
 .prev__img,
 .next__img {
      &:active {
-          background-color: $newMain2;
+          opacity: 0.8;
      }
      border: none;
      font-size: 50px;
-     color: $newMain;
+     color: $newMain3;
      background: transparent;
 
      @media screen and (max-width: 767px) {
@@ -53,17 +54,19 @@
 .me {
      &__full {
           position: relative;
+          transition: 0.4s ease;
           &--close {
                display: none;
           }
           &--overlay {
                position: absolute;
-               background-color: rgba(0, 70, 21, 0.842);
+               background-color: rgba(0, 15, 5, 0.747);
                top: 0;
                left: 0;
                width: 100%;
                height: 100%;
                z-index: -2;
+               transition: 0.35s ease;
           }
           &--show {
                position: fixed;
@@ -74,6 +77,7 @@
                z-index: 9999999;
                @include flex(between);
                display: none;
+               transition: 0.35s ease;
 
                padding: 0 180px;
                @media screen and (max-width: 767px) {
@@ -87,37 +91,47 @@
 
                &-item {
                     @include abs(center);
-                    min-width: 400px;
                     width: 1000px;
-                    height: 700px;
+                    height: 650px;
+                    min-width: 300px;
                     border: 5px solid $mainClr;
-                    box-shadow: 0 0 10px $hoverClr;
+                    box-shadow: 0 0 5px $hoverClr;
                     z-index: -1;
+                    transition: 0.35s ease;
+
                     @media screen and (max-width: 767px) {
                          margin-top: -80px;
-                         width: 190px;
-                         height: 400px;
+                         width: 100%;
+                         height: 300px;
                     }
                }
           }
      }
      &__box {
-          min-width: 500px;
+          min-width: 450px;
           height: 300px;
-          background: $subClr2;
+          background: $hoverClr;
+
           position: relative;
           overflow: hidden;
           box-shadow: 0 0 1px $mainClr;
           transition: 0.35s ease;
           @media screen and (max-width: 767px) {
                min-width: 100%;
+               height: 320px;
           }
+          @media screen and (min-width: 560px) and (max-width: 800px) {
+               min-width: 80%;
+               height: 330px;
+          }
+
           &:hover img {
                transform: scale(1.05);
           }
           & img {
                @include abs(full);
                transition: 0.35s ease;
+               opacity: 0;
 
                cursor: zoom-in;
                transition: 0.5s ease-in;
